# TranscribeAI-Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.MultiVoiceWorker  README.md  docker-compose.yml  pyproject.toml  run_api.py  run_mono_voix_worker.py  run_multi_voix_worker.py  todo.md
apps/mono-voice-worker/: .env.example  Dockerfile  README.md  pyproject.toml
apps/mono-voice-worker/src/: main.py
apps/mono-voice-worker/src/mono_voice_worker/: __init__.py  client_whisper.py  config.py  main.py  worker_mono_voice.py
apps/mono-voice-worker/tests/integrations/: test_main.py
apps/mono-voice-worker/tests/units/: test_client_whisper.py  test_config.py  test_main.py  test_worker_mono_voice.py
apps/transcribe-ai-api/: Dockerfile  pyproject.toml
apps/transcribe-ai-api/src/: main.py
apps/transcribe-ai-api/src/transcribe_ai_api/: __init__.py  config.py  create_app.py
apps/transcribe-ai-api/src/transcribe_ai_api/Controllers/: __init__.py  batch_transcription_controller.py  diarization_transcription_controller.py
apps/transcribe-ai-api/src/transcribe_ai_api/Helpers/: __init__.py  responses.py
apps/transcribe-ai-api/src/transcribe_ai_api/Middlewares/: check_audio.py  check_key_middleware.py
apps/transcribe-ai-api/src/transcribe_ai_api/Routes/: __init__.py
apps/transcribe-ai-api/src/transcribe_ai_api/Schemas/: __init__.py  (+2 more)
transcribe-ai-shared/: README.md  pyproject.toml
transcribe-ai-shared/src/transcribe_ai_shared/: BaseConfig.py  __init__.py  base_settings.py
transcribe-ai-shared/src/transcribe_ai_shared/database/: __init__.py  base.py  config.py  engine.py  job_model.py  job_repositorie.py  session.py
transcribe-ai-shared/src/transcribe_ai_shared/services/: __init__.py  audio_manager.py  redis_queue_service.py
transcribe-ai-shared/tests/: README.md  __init__.py  conftest.py  docker-compose.yml
transcribe-ai-shared/tests/database/: README.md
transcribe-ai-shared/tests/database/integration/: conftest.py  test_audio_storage_contract.py  test_job_repository.py  test_model.py  test_session.py
transcribe-ai-shared/tests/database/unit/: __init__.py  test_config.py  test_engine.py  test_model.py  test_session.py
transcribe-ai-shared/tests/services/: README.md  __init__.py
transcribe-ai-shared/tests/services/integration/: conftest.py  test_audio_manager.py  test_redis_queue_service.py
transcribe-ai-shared/tests/services/unit/: test_redis_queue_service.py
transcribe-ai-shared/tests/settings/unit/: __init__.py  test_settings.py
transcribe-ai-shared/tests/unit/: test_public_api.py
(+33 files in other folders)
